--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-scripts": "2.0.4"
   },
   "scripts": {
-    "compile:sass": "node-sass ./src/sass/main.scss  ./src/css/connect_4.css -w",
+    "compile:sass": "node-sass ./src/sass/main.scss  ./src/css/vesalica.css -w",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
