--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "vesalica",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ivanbkovacevic.github.io/vesalica",
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "compile:sass": "node-sass ./src/sass/main.scss  ./src/css/vesalica.css -w",
     "start": "react-scripts start",
     "build": "react-scripts build",
