--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "homepage": "https://ivanbkovacevic.github.io/vesalica",
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^5.5.4",
     "gh-pages": "^2.0.1",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "save": "^2.3.2"
   },
   "scripts": {
     "deploy": "npm run build&&gh-pages -d build",
