--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
-    "save": "^2.3.2"
+    "save": "^2.3.2",
+    "upper-case": "^1.1.3"
   },
   "scripts": {
     "deploy": "npm run build&&gh-pages -d build",
