--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vesalica",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ivanbkovacevic.github.io/vesalica",
+  "homepage": "https://ivanbkovacevic.github.io/vesalica1",
   "dependencies": {
     "axios": "^0.18.0",
     "firebase": "^5.5.4",
