--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vesalica",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ivanbkovacevic.github.io/vesalica1",
+  "homepage": "https://ivanbkovacevic.github.io/vesalica",
   "dependencies": {
     "axios": "^0.18.0",
     "firebase": "^5.5.4",
@@ -16,7 +16,7 @@
     "upper-case": "^1.1.3"
   },
   "scripts": {
-    "deploy": "npm run build&&gh-pages -d build",
+    "deploy": "npm run build&&gh-pages -b master -d build",
     "compile:sass": "node-sass ./src/sass/main.scss  ./src/css/vesalica.css -w",
     "start": "react-scripts start",
     "build": "react-scripts build",
