--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
      "deploy": "npm run build&&gh-pages -d build",
     "compile:sass": "node-sass ./src/sass/main.scss  ./src/css/vesalica.css -w",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "buuild": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
